[Bug] Attempt to fix the tab color on mobile

--- a/src/components/Student/Result/Result.css
+++ b/src/components/Student/Result/Result.css
@@ -26,6 +26,7 @@
     }
     .result_container .css-1h9z7r5-MuiButtonBase-root-MuiTab-root {
         margin: unset!important;
+        color: var(--text)!important;
     }
 }
 
